 
OPTIMIZATIONS
 
BUG FIXES


Release 0.12.0 (unreleased changes)

INCOMPATIBLE CHANGES

PIG-3419: Pluggable Execution Engine (achalsoni81 via cheolsoo)

PIG-3191: [piggybank] MultiStorage output filenames are not sortable (Danny Antonelli via jcoveney)

PIG-3174: Remove rpm and deb artifacts from build.xml (gates)

IMPROVEMENTS

PIG-3493: Add max/min for datetime (tyro89 via daijy)

PIG-3479: Fix BigInt, BigDec, Date serialization. Improve perf of PigNullableWritable deserilization (dvryaboy)

PIG-3461: Rewrite PartitionFilterOptimizer to make it work for all the cases (aniket486)

PIG-2417: Streaming UDFs - allow users to easily write UDFs in scripting languages with no
          JVM implementation. (jeremykarn via daijy)

PIG-3199: Provide a method to retriever name of loader/storer in PigServer (prkommireddi via daijy)

PIG-3367: Add assert keyword (operator) in pig (aniket486)

PIG-3235: Avoid extra byte array copies in streaming (rohini)

PIG-3065: pig output format/committer should support recovery for hadoop 0.23 (daijy)

PIG-3390: Make pig working with HBase 0.95 (jarcec via daijy)

PIG-3431: Return more information for parsing related exceptions. (jeremykarn via daijy)

PIG-3430: Add xml format for explaining MapReduce Plan. (jeremykarn via daijy)

PIG-3048: Add mapreduce workflow information to job configuration (billie.rinaldi via daijy)

PIG-3436: Make pigmix run with Hadoop2 (rohini)

PIG-3424: Package import list should consider class name as is first even if -Dudf.import.list is passed (rohini)

PIG-3204: Change script parsing to parse entire script instead of line by line (rohini)

PIG-3359: Register Statements and Param Substitution in Macros (jpacker via cheolsoo)

PIG-3182: Pig currently lacks functions to trim the whitespace only on one hand side (sarutak via cheolsoo)

PIG-3163: Pig current releases lack a UDF endsWith. This UDF tests if a given string ends with the specified suffix (sriramkrishnan via cheolsoo)
